refactor to directed types

--- a/scripts/graph_demo.ipynb
+++ b/scripts/graph_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "paperback-briefs",
+   "id": "continent-barrier",
    "metadata": {},
    "source": [
     "# Graph"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amazing-munich",
+   "id": "technological-abraham",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "daily-birth",
+   "id": "described-tours",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "starting-third",
+   "id": "fleet-smile",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "affecting-meter",
+   "id": "maritime-plain",
    "metadata": {},
    "source": [
     "## Minimal example"
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "impossible-mailing",
+   "id": "accomplished-connecticut",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "derived-charlotte",
+   "id": "competent-scroll",
    "metadata": {},
    "source": [
     "## cycle example"
@@ -81,21 +81,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "altered-demographic",
+   "id": "square-month",
    "metadata": {},
    "outputs": [],
    "source": [
     "# minimal example\n",
     "G = nx.DiGraph()\n",
-    "G.add_nodes_from((\"A\", \"B\", \"C\"))\n",
-    "G.add_edges_from([(\"C\", \"B\"), (\"B\", \"A\"), (\"C\", \"A\")])\n",
+    "G.add_nodes_from((\"A\", \"B\", \"C\", \"D\"))\n",
+    "G.add_edges_from([(\"B\", \"C\"), (\"B\", \"A\"), (\"C\", \"D\"), (\"D\", \"B\")])\n",
     "buff = weldx.asdf.util.write_buffer(dict(graph=G))\n",
+    "nx.draw(G, with_labels=True)\n",
     "weldx.asdf.util.notebook_fileprinter(buff)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "durable-street",
+   "id": "burning-representation",
    "metadata": {},
    "source": [
     "### complex example"
@@ -104,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "genetic-semiconductor",
+   "id": "legitimate-warning",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "toxic-accent",
+   "id": "consolidated-latex",
    "metadata": {},
    "source": [
     "## Measurement Example"
@@ -130,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sustained-printing",
+   "id": "superb-designation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "communist-tunnel",
+   "id": "contained-debut",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -155,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "correct-nickel",
+   "id": "indian-syndrome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "angry-replacement",
+   "id": "representative-indian",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "stylish-going",
+   "id": "above-collective",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "spatial-mentor",
+   "id": "tribal-palestine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -197,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "wooden-quantum",
+   "id": "broad-poison",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -207,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "requested-flight",
+   "id": "important-opera",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suffering-weekend",
+   "id": "flush-puzzle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "quick-emission",
+   "id": "nearby-japan",
    "metadata": {},
    "outputs": [],
    "source": [
