--- a/scripts/graph_demo.ipynb
+++ b/scripts/graph_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "continent-barrier",
+   "id": "attempted-region",
    "metadata": {},
    "source": [
     "# Graph"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "technological-abraham",
+   "id": "unavailable-tribe",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "described-tours",
+   "id": "beneficial-manual",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fleet-smile",
+   "id": "thick-republican",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "maritime-plain",
+   "id": "identical-southeast",
    "metadata": {},
    "source": [
     "## Minimal example"
@@ -58,21 +58,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accomplished-connecticut",
+   "id": "boring-techno",
    "metadata": {},
    "outputs": [],
    "source": [
     "# minimal example\n",
     "G = nx.DiGraph()\n",
     "G.add_nodes_from((\"A\", \"B\", \"C\"))\n",
-    "G.add_edges_from([(\"C\", \"B\"), (\"B\", \"A\")])\n",
+    "G.add_edges_from([(\"A\", \"B\"), (\"C\", \"B\")])\n",
     "buff = weldx.asdf.util.write_buffer(dict(graph=G))\n",
     "weldx.asdf.util.notebook_fileprinter(buff)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "competent-scroll",
+   "id": "dietary-calculator",
    "metadata": {},
    "source": [
     "## cycle example"
@@ -81,7 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "square-month",
+   "id": "rocky-discharge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "burning-representation",
+   "id": "hollywood-terminal",
    "metadata": {},
    "source": [
     "### complex example"
@@ -105,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "legitimate-warning",
+   "id": "nasty-genetics",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +122,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "consolidated-latex",
+   "id": "accomplished-breast",
    "metadata": {},
    "source": [
     "## Measurement Example"
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "superb-designation",
+   "id": "soviet-source",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "contained-debut",
+   "id": "separate-passenger",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "indian-syndrome",
+   "id": "banner-nicaragua",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "representative-indian",
+   "id": "alleged-armenia",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +177,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "above-collective",
+   "id": "suitable-double",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tribal-palestine",
+   "id": "concerned-mouth",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,7 +198,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "broad-poison",
+   "id": "median-spring",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +208,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "important-opera",
+   "id": "considered-corrections",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "flush-puzzle",
+   "id": "minute-phase",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,7 +230,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nearby-japan",
+   "id": "official-cricket",
    "metadata": {},
    "outputs": [],
    "source": [
