--- a/scripts/draft_example.ipynb
+++ b/scripts/draft_example.ipynb
@@ -3,17 +3,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pleased-clone",
+   "id": "julian-individual",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.measurement import MeasurementChainGraph, Error"
+    "from weldx.measurement import MeasurementChainGraph, Error\n",
+    "from weldx import MathematicalExpression"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "better-defeat",
+   "id": "fresh-direction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +28,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "political-congo",
+   "id": "accurate-garage",
    "metadata": {},
    "outputs": [],
    "source": [
     "mc.add_transformation(\"AD conversion current measurement\", \n",
     "                      error=Error(0.97), \n",
+    "                      func=MathematicalExpression(\"a*x+b\"),\n",
     "                      output_signal_type=\"digital\", \n",
     "                      output_signal_unit = \"\")"
    ]
@@ -40,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "restricted-ethernet",
+   "id": "sunrise-effect",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +55,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "under-cylinder",
+   "id": "greenhouse-chrome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "pretty-sunglasses",
+   "id": "identical-cradle",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fantastic-apache",
+   "id": "framed-participation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "monthly-bouquet",
+   "id": "attempted-eugene",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +95,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fancy-halifax",
+   "id": "double-advance",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,7 +105,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "demanding-legend",
+   "id": "baking-fundamental",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +116,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "configured-camping",
+   "id": "unavailable-homeless",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "going-excuse",
+   "id": "independent-avatar",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "advance-provider",
+   "id": "binding-slope",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,17 +154,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "parallel-review",
+   "id": "molecular-diversity",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_2._graph.nodes()"
+    "mc_2.add_signal_data(\"test\",[1,2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alternative-winner",
+   "id": "quick-probability",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_2.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "herbal-planet",
    "metadata": {},
    "outputs": [],
    "source": []
