update cyclic graph (broken)

--- a/scripts/graph_demo.ipynb
+++ b/scripts/graph_demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "attempted-region",
+   "id": "intense-candidate",
    "metadata": {},
    "source": [
     "# Graph"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unavailable-tribe",
+   "id": "handed-madison",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "beneficial-manual",
+   "id": "loving-bubble",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thick-republican",
+   "id": "liberal-flower",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "identical-southeast",
+   "id": "invalid-tucson",
    "metadata": {},
    "source": [
     "## Minimal example"
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "boring-techno",
+   "id": "royal-challenge",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,8 +71,18 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "enabling-commercial",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "weldx.asdf.util.asdf_json_repr(buff)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "dietary-calculator",
+   "id": "delayed-minnesota",
    "metadata": {},
    "source": [
     "## cycle example"
@@ -81,22 +91,34 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rocky-discharge",
+   "id": "infrared-recording",
    "metadata": {},
    "outputs": [],
    "source": [
     "# minimal example\n",
     "G = nx.DiGraph()\n",
     "G.add_nodes_from((\"A\", \"B\", \"C\", \"D\"))\n",
-    "G.add_edges_from([(\"B\", \"C\"), (\"B\", \"A\"), (\"C\", \"D\"), (\"D\", \"B\")])\n",
+    "G.add_edges_from([(\"B\", \"C\"), (\"A\", \"B\"), (\"C\", \"D\"), (\"D\", \"B\")])\n",
     "buff = weldx.asdf.util.write_buffer(dict(graph=G))\n",
     "nx.draw(G, with_labels=True)\n",
     "weldx.asdf.util.notebook_fileprinter(buff)"
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "numerical-scholarship",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tree = weldx.asdf.util.read_buffer(buff)\n",
+    "G2 = tree[\"graph\"]\n",
+    "nx.draw(G2, with_labels=True)"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "hollywood-terminal",
+   "id": "loaded-trunk",
    "metadata": {},
    "source": [
     "### complex example"
@@ -105,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "nasty-genetics",
+   "id": "instant-grove",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,7 +144,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "accomplished-breast",
+   "id": "robust-allen",
    "metadata": {},
    "source": [
     "## Measurement Example"
@@ -131,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "soviet-source",
+   "id": "friendly-latino",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "separate-passenger",
+   "id": "standard-medline",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +178,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "banner-nicaragua",
+   "id": "seasonal-initial",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "alleged-armenia",
+   "id": "hydraulic-worker",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -177,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "suitable-double",
+   "id": "declared-medication",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "concerned-mouth",
+   "id": "directed-conversation",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -198,17 +220,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "median-spring",
+   "id": "unsigned-phoenix",
    "metadata": {},
    "outputs": [],
    "source": [
-    "tree = weldx.asdf.util.read_buffer(buff)"
+    "tree = weldx.asdf.util.read_buffer(buff)\n",
+    "G2 = tree[\"measurement_chain\"].graph"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "considered-corrections",
+   "id": "instrumental-particular",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -219,7 +242,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "minute-phase",
+   "id": "authorized-heading",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -230,18 +253,26 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "official-cricket",
+   "id": "confirmed-definition",
    "metadata": {},
    "outputs": [],
    "source": [
     "for edge in G.edges:\n",
     "    assert G.edges[edge] == G2.edges[edge]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "welcome-strand",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "weldx (3.8)",
+   "display_name": "weldx",
    "language": "python",
    "name": "weldx"
   },
