--- a/tutorials/measurement_example.ipynb
+++ b/tutorials/measurement_example.ipynb
@@ -146,7 +146,7 @@
     "## Defining a measurement chain: current measurement\n",
     "Now we define the missing elements of our measurement chain and bundle everything together. A core concept of the chain are `signals` that go in and out of `transformations` which define mathematical operations of the signals, forming the chain.\n",
     "\n",
-    "Each measurement chain starts with a `Source` signal. This is the point where our physical process or quantity is initially detected by a sensor. We define a `measurement.Source` object by giving a `name`, defining the `Signal` type and an `error` representing the uncertainty attached to the signal source. In a way, a `Source` is a special type of `transformation` in that it only has an `output_signal` but no `input_signal`.\n",
+    "Each measurement chain starts with a source signal. This is the point where our physical process or quantity is initially detected by a sensor. Since every `MeasurementChain` needs at least a source, we need to provide the corresponding data when creating an instance of this class. The parameters are the `source_name`, the `output_signal_type` and `output_signal_unit` as well as the `source_error` representing the uncertainty attached to the signal source. \n",
     "\n",
     "For our current measurement, the source outputs an **analog Signal** of unit **V**. Since there is no recording of this measurement we do not provide the data. According to the spec sheet of the sensor the measurement error in this initial step is **0.1 %** which can be documented using the `Error` property (again using quantities)."
    ]
@@ -157,10 +157,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_current = msm.Source(\n",
-    "    name=\"Current Sensor\",\n",
-    "    output_signal=msm.Signal(signal_type=\"analog\", unit=\"V\", data=None),\n",
-    "    error=msm.Error(Q_(0.1, \"percent\")),\n",
+    "welding_current_chain = msm.MeasurementChain(\n",
+    "    name=\"welding current measurement chain\",\n",
+    "    source_name=\"Current Sensor\",\n",
+    "    output_signal_type=\"analog\", \n",
+    "    output_signal_unit=\"V\",\n",
+    "    source_error=msm.Error(Q_(0.1, \"percent\")),\n",
     ")"
    ]
   },
@@ -177,8 +179,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HKS_sensor.sources = []\n",
-    "HKS_sensor.sources.append(src_current)"
+    "#HKS_sensor.sources = []\n",
+    "#HKS_sensor.sources.append(src_current)"
    ]
   },
   {
@@ -222,13 +224,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_AD_transform = msm.DataTransformation(\n",
+    "#current_AD_transform = msm.DataTransformation(\n",
+    "#    name=\"AD conversion current measurement\",\n",
+    "#    input_signal=src_current.output_signal,\n",
+    "#    output_signal=msm.Signal(\"digital\", \"\", data=None),\n",
+    "#    error=msm.Error(Q_(0.01, \"percent\")),\n",
+    "#    func=current_AD_func,\n",
+    "#)\n",
+    "welding_current_chain.add_transformation(\n",
     "    name=\"AD conversion current measurement\",\n",
-    "    input_signal=src_current.output_signal,\n",
-    "    output_signal=msm.Signal(\"digital\", \"\", data=None),\n",
+    "    output_signal_type=\"digital\",\n",
+    "    output_signal_unit=\"\",\n",
     "    error=msm.Error(Q_(0.01, \"percent\")),\n",
-    "    func=current_AD_func,\n",
-    ")"
+    "    func=current_AD_func                \n",
+    ")\n"
    ]
   },
   {
@@ -244,8 +253,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "BH_ELM.data_transformations = []\n",
-    "BH_ELM.data_transformations.append(current_AD_transform)"
+    "# BH_ELM.data_transformations = []\n",
+    "# BH_ELM.data_transformations.append(current_AD_transform)"
    ]
   },
   {
@@ -289,21 +298,33 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "current_calib_transform = msm.DataTransformation(\n",
+    "#current_calib_transform = msm.DataTransformation(\n",
+    "#    name=\"Calibration current measurement\",\n",
+    "#    input_signal=current_AD_transform.output_signal,\n",
+    "#    output_signal=msm.Signal(\"digital\", \"A\", data=current_data),\n",
+    "#    error=msm.Error(0.0),\n",
+    "#    func=current_calib_func,\n",
+    "#    meta=twincat_scope,\n",
+    "#)\n",
+    "\n",
+    "# todo:\n",
+    "# - add signal data parameter?\n",
+    "# - add meta data\n",
+    "welding_current_chain.add_transformation(\n",
     "    name=\"Calibration current measurement\",\n",
-    "    input_signal=current_AD_transform.output_signal,\n",
-    "    output_signal=msm.Signal(\"digital\", \"A\", data=current_data),\n",
+    "    output_signal_type=\"digital\",\n",
+    "    output_signal_unit=\"A\",\n",
     "    error=msm.Error(0.0),\n",
-    "    func=current_calib_func,\n",
-    "    meta=twincat_scope,\n",
-    ")"
+    "    func=current_calib_func\n",
+    ")\n",
+    "welding_current_chain.add_signal_data(current_data.name, current_data.data)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that all transformation steps are defined, we can create our `MeasurementChain` object. We pass on the initial source as well as all transformation steps in order."
+    "Now that our `MeasurementChain` is complete, we can visualize it using its `plot` function."
    ]
   },
   {
@@ -312,11 +333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "welding_current_chain = msm.MeasurementChain(\n",
-    "    name=\"welding current measurement chain\",\n",
-    "    data_source=src_current,\n",
-    "    data_processors=[current_AD_transform, current_calib_transform],\n",
-    ")"
+    "welding_current_chain.plot()"
    ]
   },
   {
@@ -353,13 +370,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "src_voltage = msm.Source(\n",
-    "    name=\"Voltage Sensor\",\n",
-    "    output_signal=msm.Signal(\"analog\", \"V\", data=None),\n",
-    "    error=msm.Error(Q_(0.1, \"percent\")),\n",
-    ")\n",
+    "welding_voltage_chain = msm.MeasurementChain(\n",
+    "    name=\"welding voltage measurement\",\n",
+    "    source_name=\"Voltage Sensor\",\n",
+    "    output_signal_type=\"analog\",\n",
+    "    output_signal_unit=\"V\",\n",
+    "    source_error=msm.Error(Q_(0.1, \"percent\"))\n",
+    ") \n",
     "\n",
-    "HKS_sensor.sources.append(src_voltage)\n",
+    "#HKS_sensor.sources.append(src_voltage)\n",
     "\n",
     "# define AD conversion expression and transformation step\n",
     "[a, x, b] = sympy.symbols(\"a x b\")\n",
@@ -367,42 +386,60 @@
     "voltage_ad_func.set_parameter(\"a\", Q_(32768.0 / 10.0, \"1/V\"))\n",
     "voltage_ad_func.set_parameter(\"b\", Q_(0.0, \"\"))\n",
     "\n",
-    "voltage_AD_transform = msm.DataTransformation(\n",
+    "#voltage_AD_transform = msm.DataTransformation(\n",
+    "#    name=\"AD conversion voltage measurement\",\n",
+    "#    input_signal=src_voltage.output_signal,\n",
+    "#    output_signal=msm.Signal(\"digital\", \"\", data=None),\n",
+    "#    error=msm.Error(Q_(0.01, \"percent\")),\n",
+    "#    func=voltage_ad_func,\n",
+    "#)\n",
+    "\n",
+    "welding_voltage_chain.add_transformation(\n",
     "    name=\"AD conversion voltage measurement\",\n",
-    "    input_signal=src_voltage.output_signal,\n",
-    "    output_signal=msm.Signal(\"digital\", \"\", data=None),\n",
+    "    output_signal_type=\"digital\",\n",
+    "    output_signal_unit=\"\",\n",
     "    error=msm.Error(Q_(0.01, \"percent\")),\n",
-    "    func=voltage_ad_func,\n",
+    "    func=voltage_ad_func\n",
     ")\n",
     "\n",
-    "HKS_sensor.data_transformations.append(voltage_AD_transform)\n",
+    "#HKS_sensor.data_transformations.append(voltage_AD_transform)\n",
     "\n",
     "# define voltage output calibration expression and transformation\n",
     "voltage_calib_func = MathematicalExpression(a * x + b)\n",
     "voltage_calib_func.set_parameter(\"a\", Q_(100.0 / 32768.0, \"V\"))\n",
     "voltage_calib_func.set_parameter(\"b\", Q_(0.0, \"V\"))\n",
     "\n",
-    "voltage_calib_transform = msm.DataTransformation(\n",
+    "#voltage_calib_transform = msm.DataTransformation(\n",
+    "#    name=\"Calibration voltage measurement\",\n",
+    "#    input_signal=voltage_AD_transform.output_signal,\n",
+    "#    output_signal=msm.Signal(\"digital\", \"V\", data=voltage_data),\n",
+    "#    error=msm.Error(0.0),\n",
+    "#    func=voltage_calib_func,\n",
+    "#    meta=twincat_scope,\n",
+    "#)\n",
+    "\n",
+    "# todo: add meta\n",
+    "welding_voltage_chain.add_transformation(\n",
     "    name=\"Calibration voltage measurement\",\n",
-    "    input_signal=voltage_AD_transform.output_signal,\n",
-    "    output_signal=msm.Signal(\"digital\", \"V\", data=voltage_data),\n",
+    "    output_signal_type=\"digital\",\n",
+    "    output_signal_unit=\"V\",\n",
     "    error=msm.Error(0.0),\n",
-    "    func=voltage_calib_func,\n",
-    "    meta=twincat_scope,\n",
+    "    func=voltage_calib_func\n",
     ")\n",
+    "welding_voltage_chain.add_signal_data(voltage_data.name, voltage_data.data)\n",
     "\n",
-    "\n",
-    "welding_voltage_chain = msm.MeasurementChain(\n",
-    "    name=\"welding voltage measurement chain\",\n",
-    "    data_source=src_voltage,\n",
-    "    data_processors=[voltage_AD_transform, voltage_calib_transform],\n",
-    ")\n",
+    "#welding_voltage_chain = msm.MeasurementChain(\n",
+    "#    name=\"welding voltage measurement chain\",\n",
+    "#    data_source=src_voltage,\n",
+    "#    data_processors=[voltage_AD_transform, voltage_calib_transform],\n",
+    "#)\n",
     "\n",
     "welding_voltage = msm.Measurement(\n",
     "    name=\"welding voltage measurement\",\n",
     "    data=[voltage_data],\n",
     "    measurement_chain=welding_voltage_chain,\n",
-    ")"
+    ")\n",
+    "welding_voltage_chain.plot()"
    ]
   },
   {
@@ -510,7 +547,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.9"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
