fix offensive typo :D

--- a/tutorials/welding_example_01_basics.ipynb
+++ b/tutorials/welding_example_01_basics.ipynb
@@ -82,7 +82,7 @@
     "The groove shall have the following attributes:\n",
     "\n",
     "- a workpiece thickness of 5 mm\n",
-    "- a single sided V-Groove butt weld with 50 degree groove angle\n",
+    "- a single sided V-Groove but weld with 50 degree groove angle\n",
     "- root gap and face of 1 mm\n",
     "\n",
     "To generate the groove shape, we can use the `get_groove` function of the of `iso_groove` that implements all groove types and shapes defined in *ISO 9692-1:2013*. For all available groove types and options take a look at the extensive docstring of `get_groove` and the groove_type tutorial notebook.\n",
