Use signal class internally

--- a/scripts/draft_example.ipynb
+++ b/scripts/draft_example.ipynb
@@ -3,22 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "challenging-turkish",
+   "id": "pacific-holder",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from weldx.measurement import MeasurementChainGraph, Error\n",
+    "from weldx.measurement import MeasurementChain, Error\n",
     "from weldx import MathematicalExpression"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "equal-coverage",
+   "id": "first-corps",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc = MeasurementChainGraph(name=\"Current measurement chain\", \n",
+    "mc = MeasurementChain(name=\"Current measurement chain\", \n",
     "                           source_name=\"Current Sensor\", \n",
     "                           source_error=Error(13.37), \n",
     "                           output_signal_type=\"analog\", \n",
@@ -28,7 +28,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "combined-indianapolis",
+   "id": "undefined-subscription",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bronze-genre",
+   "id": "blessed-liberty",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -55,17 +55,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "incoming-moment",
+   "id": "destroyed-sound",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc.add_signal_data(\"my_data\", [1,2,3])"
+    "mc.add_signal_data([1,2,3])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "downtown-parent",
+   "id": "imposed-cream",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "everyday-arena",
+   "id": "sustainable-holiday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sensitive-nursing",
+   "id": "fancy-phrase",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -95,17 +95,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "amazing-citizen",
+   "id": "unlikely-orchestra",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc.get_data(\"my_data\")"
+    "mc.get_signal_data()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cosmetic-sunset",
+   "id": "referenced-sunday",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,11 +116,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "funky-uzbekistan",
+   "id": "interesting-treat",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_2 = MeasurementChainGraph(name=\"Other measurement chain\", \n",
+    "mc_2 = MeasurementChain(name=\"Other measurement chain\", \n",
     "                           source_name=\"Current Sensor\", \n",
     "                           source_error=Error(13.3), \n",
     "                           output_signal_type=\"analog\", \n",
@@ -130,7 +130,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "excessive-backing",
+   "id": "bottom-crossing",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -143,7 +143,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "vietnamese-joyce",
+   "id": "naval-destruction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,17 +154,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "robust-chase",
+   "id": "solar-segment",
    "metadata": {},
    "outputs": [],
    "source": [
-    "mc_2.add_signal_data(\"test\",[1,2])"
+    "mc_2.add_signal_data([1,2])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "medical-filling",
+   "id": "south-vaccine",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +174,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arranged-perth",
+   "id": "blocked-headset",
    "metadata": {},
    "outputs": [],
    "source": []
