Evaluate function of transformation

--- a/scripts/measurement_chain_with_equipment.ipynb
+++ b/scripts/measurement_chain_with_equipment.ipynb
@@ -3,20 +3,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "based-house",
+   "id": "thrown-world",
    "metadata": {
     "tags": []
    },
    "outputs": [],
    "source": [
     "from weldx import Q_\n",
-    "from weldx.measurement import MeasurementChain, GenericEquipment, SignalTransformation, SignalSource, Signal, Error"
+    "from weldx.measurement import MeasurementChain, GenericEquipment, SignalTransformation, SignalSource, Signal, Error\n",
+    "from weldx import MathematicalExpression"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dated-jones",
+   "id": "sound-exploration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,7 @@
     "                      output_signal=Signal(signal_type=\"analog\",\n",
     "                                           unit=\"V\",\n",
     "                                           data=[1,3,5]),\n",
-    "                      error=Error(Q_(1, \"percent\"))\n",
+    "                      error=Error(Q_(1, \"percent\")),\n",
     "                     )\n",
     "source_voltage = SignalSource(\"Voltage measurement\", \n",
     "                      output_signal=Signal(signal_type=\"analog\",\n",
@@ -37,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "abandoned-fiber",
+   "id": "arabic-lincoln",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,7 +48,11 @@
     "                                                     unit=\"V\"),\n",
     "                                 output_signal=Signal(signal_type=\"digital\",\n",
     "                                                      unit=\"\",\n",
-    "                                                      data = [10,12,13])\n",
+    "                                                      data = [10,12,13]),\n",
+    "                                 func=MathematicalExpression(expression=\"a*x+b\",\n",
+    "                                                             parameters=dict(a=Q_(1,\"1/V\"),\n",
+    "                                                                             b=Q_(1,\"\"))\n",
+    "                                                            )\n",
     "                                 )\n",
     "AD_voltage = SignalTransformation(\"AD conversion voltage measurement\",\n",
     "                                 error=Error(Q_(0.2, \"percent\")),\n",
@@ -55,7 +60,11 @@
     "                                                     unit=\"V\"),\n",
     "                                 output_signal=Signal(signal_type=\"digital\",\n",
     "                                                      unit=\"\",\n",
-    "                                                      data = [-10,-12,-13])\n",
+    "                                                      data = [-10,-12,-13]),\n",
+    "                                  func=MathematicalExpression(expression=\"a*x+b\",\n",
+    "                                                  parameters=dict(a=Q_(1,\"1/V\"),\n",
+    "                                                                  b=Q_(1,\"\"))\n",
+    "                                                 )\n",
     "                                 )\n",
     "\n",
     "calibration_current = SignalTransformation(\"Current measurement calibration\",\n",
@@ -64,7 +73,11 @@
     "                                                     unit=\"\"),\n",
     "                                 output_signal=Signal(signal_type=\"digital\",\n",
     "                                                      unit=\"A\",\n",
-    "                                                      data = [100,102,103])\n",
+    "                                                      data = [100,102,103]),\n",
+    "                                  func=MathematicalExpression(expression=\"a*x+b\",\n",
+    "                                                  parameters=dict(a=Q_(1,\"A\"),\n",
+    "                                                                  b=Q_(1,\"A\"))\n",
+    "                                                 )\n",
     "                                 )\n",
     "calibration_voltage = SignalTransformation(\"Voltage measurement calibration\",\n",
     "                                 error=Error(Q_(0.7, \"percent\")),\n",
@@ -72,14 +85,18 @@
     "                                                     unit=\"\"),\n",
     "                                 output_signal=Signal(signal_type=\"digital\",\n",
     "                                                      unit=\"V\", \n",
-    "                                                      data = [-100,-102,-103])\n",
+    "                                                      data = [-100,-102,-103]),\n",
+    "                                  func=MathematicalExpression(expression=\"a*x+b\",\n",
+    "                                                  parameters=dict(a=Q_(1,\"V\"),\n",
+    "                                                                  b=Q_(1,\"V\"))\n",
+    "                                                 )\n",
     "                                 )"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "compressed-brazilian",
+   "id": "tribal-reproduction",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "foster-paintball",
+   "id": "unavailable-bermuda",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "relative-element",
+   "id": "rough-conflict",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sonic-equity",
+   "id": "lesbian-modern",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -124,7 +141,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "smooth-switzerland",
+   "id": "varying-charger",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_voltage = MeasurementChain.construct_from_equipment(\"Voltage Measurement Chain\", equipment, \"Voltage measurement\")\n",
+    "mc_voltage.add_transformation_from_equipment(equipment, transformation_name=\"AD conversion voltage measurement\")\n",
+    "mc_voltage.add_transformation_from_equipment(equipment, transformation_name=\"Voltage measurement calibration\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fatal-grass",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_voltage.plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "characteristic-response",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "persistent-criticism",
+   "id": "requested-cookie",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "accepting-norway",
+   "id": "irish-provision",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,9 +191,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "miniature-miniature",
+   "metadata": {},
+   "source": [
+    "# Stuff that keeps users from making errors"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "comfortable-default",
+   "id": "experimental-toolbox",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -167,32 +214,56 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "automatic-spirit",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mc_voltage = MeasurementChain.construct_from_equipment(\"Voltage Measurement Chain\", equipment, \"Voltage measurement\")\n",
-    "mc_voltage.add_transformation_from_equipment(equipment, transformation_name=\"AD conversion voltage measurement\")\n",
-    "mc_voltage.add_transformation_from_equipment(equipment, transformation_name=\"Voltage measurement calibration\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "valued-baltimore",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mc_voltage.plot()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bizarre-ivory",
+   "id": "closed-australian",
    "metadata": {
     "tags": []
    },
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    SignalTransformation(\"Voltage measurement calibration\",\n",
+    "                         error=Error(Q_(0.7, \"percent\")),\n",
+    "                         input_signal=Signal(signal_type=\"digital\",\n",
+    "                                             unit=\"A\"),\n",
+    "                         output_signal=Signal(signal_type=\"digital\",\n",
+    "                                              unit=\"V\", \n",
+    "                                              data = [-100,-102,-103]),\n",
+    "                         func=MathematicalExpression(expression=\"a*x+b\",\n",
+    "                                                     parameters=dict(a=Q_(1,\"V\"),\n",
+    "                                                                     b=Q_(1,\"V\")))\n",
+    "                         )\n",
+    "except Exception as e:\n",
+    "    print(e)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "uniform-malta",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "try:\n",
+    "    SignalTransformation(\"Voltage measurement calibration\",\n",
+    "                         error=Error(Q_(0.7, \"percent\")),\n",
+    "                         input_signal=Signal(signal_type=\"digital\",\n",
+    "                                             unit=\"A\"),\n",
+    "                         output_signal=Signal(signal_type=\"digital\",\n",
+    "                                              unit=\"V/s\", \n",
+    "                                              data = [-100,-102,-103]),\n",
+    "                         func=MathematicalExpression(expression=\"a*x+b\",\n",
+    "                                                     parameters=dict(a=Q_(1,\"V/A\"),\n",
+    "                                                                     b=Q_(1,\"V\")))\n",
+    "                         )\n",
+    "except Exception as e:\n",
+    "    print(e)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cardiac-tunnel",
+   "metadata": {},
    "outputs": [],
    "source": []
   }
