--- a/scripts/measurement_chain_with_equipment.ipynb
+++ b/scripts/measurement_chain_with_equipment.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "thrown-world",
+   "id": "isolated-control",
    "metadata": {
     "tags": []
    },
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "sound-exploration",
+   "id": "sticky-conducting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "arabic-lincoln",
+   "id": "reliable-groove",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "tribal-reproduction",
+   "id": "brave-range",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -109,7 +109,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "unavailable-bermuda",
+   "id": "endangered-liverpool",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "rough-conflict",
+   "id": "thrown-mason",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "lesbian-modern",
+   "id": "manufactured-duration",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -141,7 +141,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "varying-charger",
+   "id": "dying-jewelry",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +153,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fatal-grass",
+   "id": "coral-annex",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "characteristic-response",
+   "id": "starting-cologne",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "requested-cookie",
+   "id": "faced-wiring",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +183,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "irish-provision",
+   "id": "amber-genome",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -191,8 +191,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "registered-lafayette",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_current.get_equipment(\"Current measurement\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "proved-welsh",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mc_current.get_equipment(\"Current measurement calibration\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
-   "id": "miniature-miniature",
+   "id": "searching-parliament",
    "metadata": {},
    "source": [
     "# Stuff that keeps users from making errors"
@@ -201,7 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "experimental-toolbox",
+   "id": "crude-tender",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -214,7 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "closed-australian",
+   "id": "intended-gardening",
    "metadata": {
     "tags": []
    },
@@ -239,7 +259,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "uniform-malta",
+   "id": "hollywood-essex",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cardiac-tunnel",
+   "id": "painted-forty",
    "metadata": {},
    "outputs": [],
    "source": []
